--- a/src/components/myStyle.css
+++ b/src/components/myStyle.css
@@ -116,7 +116,7 @@
     scrollbar-width: none;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
         rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    height: 100%;
+    height: 734px;
 }
 
 .text-input-area {
