--- a/bridge-chat-ui/src/sections/chat/chat.css
+++ b/bridge-chat-ui/src/sections/chat/chat.css
@@ -2,43 +2,54 @@
 
 /* Style for the chat app container */
 .chat-app {
-    display: flex;
-    height: 100vh;
-  }
-  
-  /* Style for the chat list section */
-  .chat-list {
-    width: 25%;
-    padding: 10px;
-  }
-  
-  /* Style for the chat view section */
-  .chat-view {
-    width: 50%;
-    padding: 10px;
-  }
-  
-  /* Style for the user info section */
-  .user-info {
-    width: 25%;
-    padding: 10px;
-  }
-  
-  /* Avatar container */
-.online-dot {
-    position: absolute; /* To float over the icon */
-    bottom: -2px; /* Adjust top position as needed */
-    right: -2px; /* Adjust right position as needed */
-    width: 14px;
-    height: 14px;
-    border-radius: 50%; /* Circle shape */
-    background-color: #1CD14F; /* Online color */
-    border: 2px solid white; /* Optional: Adds border to the dot */
-  }
-  
-  /* Change color to red when offline */
-  .offline {
-    background-color: red;
-  }
+  display: flex;
+  height: 50vh;
+  background-color: "#FFFFF";
+}
 
-  
+/* Chat list */
+.chat-list {
+  height: 100%;
+  /* Ensure height matches parent */
+  overflow-y: auto;
+  /* Add scroll */
+  padding: 10px;
+}
+
+/* Chat view */
+.chat-view {
+  height: 100%;
+  /* Ensure height matches parent */
+  overflow-y: auto;
+  /* Add scroll */
+  padding: 10px;
+}
+
+/* Style for the user info section */
+.user-info {
+  width: 25%;
+  padding: 10px;
+}
+
+/* Avatar container */
+.online-dot {
+  position: absolute;
+  /* To float over the icon */
+  bottom: -2px;
+  /* Adjust top position as needed */
+  right: -2px;
+  /* Adjust right position as needed */
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  /* Circle shape */
+  background-color: #1CD14F;
+  /* Online color */
+  border: 2px solid white;
+  /* Optional: Adds border to the dot */
+}
+
+/* Change color to red when offline */
+.offline {
+  background-color: red;
+}
